ci(fbsd): cmake prefix

--- a/.github/workflows/fbsd-sz.yml
+++ b/.github/workflows/fbsd-sz.yml
@@ -1,4 +1,4 @@
-name: fbsd j ae
+name: fbsd -sh st sz
 
 on:
   push:
@@ -25,30 +25,31 @@ jobs:
           version: '${{ matrix.os.version }}'
           shell: bash
           run: |
+            sudo pkg update
             sudo pkg install -y cmake
-            sudo pkg install -y libaec
-            ls /usr/local/include/
-            ls /usr/local/cmake/
-            sudo pkg install -y openjdk21
+            sudo pkg install -y git
             sudo pkg install -y perl5
             export JAVA_HOME=/usr/local/openjdk21
-            export CMAKE_PREFIX_PATH="/usr/local/cmake:$CMAKE_PREFIX_PATH"
             sudo mount -t fdescfs fdesc /dev/fd
             sudo mount -t procfs proc /proc
+            git clone https://github.com/freebsd/freebsd-ports
+            sudo mv freebsd-ports /usr/ports
+            cd /usr/ports/archivers/libszip
+            sudo make install
             curl -O -L https://github.com/HDFGroup/hdf5/releases/latest/download/hdf5.tar.gz
             tar zxvf hdf5.tar.gz
             cd hdf5-1.14.5
             mkdir build
             cd build
-            export SZIP_DIR=/usr/local
             cmake \
-            -DBUILDNAME:STRING="j/ae" \
+            -DBUILDNAME:STRING="r-sh+st/sz-en" \
+            -DBUILD_SHARED_LIBS:BOOL=OFF \
+            -DBUILD_STATIC_LIBS:BOOL=ON \
+            -DHDF5_BUILD_STATIC_TOOLS:BOOL=ON \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
-            -DHDF5_BUILD_JAVA:BOOL=ON \
-            -DLIBAEC_USE_LOCALCONTENT:BOOL=ON \
-            -DUSE_LIBAEC_STATIC:BOOL=ON \
+            -DHDF5_BUILD_JAVA:BOOL=OFF \
+            -DHDF5_ENABLE_SZIP_ENCODING=OFF \
             -DSITE:STRING=fbsd \
-            -DSZIP_DIR=/usr/local \
             ..
             ctest -D Experimental -C Release
