--- a/.github/workflows/h5py.yml
+++ b/.github/workflows/h5py.yml
@@ -2,12 +2,7 @@ name: h5py
 
 on:
   push:
-    branches: [ main- ]
-    paths-ignore:
-    - 'doc/**'
-    - 'release_docs/**'
-  pull_request:
-    branches: [ main- ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -33,9 +28,10 @@ jobs:
         ./spack/bin/spack install py-pytest
         ./spack/bin/spack install py-ipython
         ./spack/bin/spack install py-pip
+        ./spack/bin/spack install py-pytest-mpi
         spack load py-h5py
         spack load py-pytest
         spack load py-ipython
         spack load py-pip
-        pip install pytest-mpi
+        spack load py-pytest-mpi
         python -c "import h5py; h5py.run_tests(); print(h5py.version.info);"
