--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -1,4 +1,4 @@
-name: r 4942
+name: r 4934
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: qkoziol/hdf5
-          ref: refactor_h5cx_stack
+          ref: refactor_h5fd_and_packages
 
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
@@ -40,7 +40,7 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="pr4942/r" \
+            -DBUILDNAME:STRING="pr4934/r" \
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
