--- a/.github/workflows/r-byrn.yml
+++ b/.github/workflows/r-byrn.yml
@@ -1,8 +1,8 @@
-name: r 4934
+name: r 4961
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -20,8 +20,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: qkoziol/hdf5
-          ref: refactor_h5fd_and_packages
+          repository: byrnHDF/hdf5
+          ref: feature/develop-2.0-rem-at
 
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
@@ -40,7 +40,7 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="pr4934/r" \
+            -DBUILDNAME:STRING="pr4961/r" \
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
