ci(ios): test auto

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -1,26 +1,36 @@
-name: mac13 ios
+name: mac ios
 
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
-    name: macos13 ios
-    runs-on: macos-13
+    name: macos ios
+    runs-on: macos-latest
     steps:
     - name: Install Dependencies (macOS)
       run: brew install ninja openmpi
     - name: Get Sources
       uses: actions/checkout@v4
       with:
-        repository: hyoklee/hdf5
+        repository: HDFGroup/hdf5
         path: ./hdf5
     - name: Test HDF5
       run: |
         mkdir ./hdf5/build
         cd ./hdf5/build
+        export SDK="iphoneos"
+        export ARCH_FLAGS="-arch armv7"
+        export HOST_FLAGS="${ARCH_FLAGS} -miphoneos-version-min=8.0 -isysroot $(xcrun -sdk ${SDK} --show-sdk-path)"
+        export CHOST="arm-apple-darwin"        
+        export OPT_FLAGS="-Os -g3"
+        export CC="$(xcrun -find -sdk ${SDK} cc)"
+        export CXX="$(xcrun -find -sdk ${SDK} cxx)"
+        export CPP="$(xcrun -find -sdk ${SDK} cpp)"
+        export CFLAGS="${HOST_FLAGS} ${OPT_FLAGS}"
+        export CXXFLAGS="${HOST_FLAGS} ${OPT_FLAGS}"        
         cmake \
         -GXcode \
         -DCMAKE_SYSTEM_NAME=iOS \
@@ -37,26 +47,20 @@ jobs:
         -DBUILD_TESTING:BOOL=OFF \
         -DBUILD_USER_DEFINED_LIBS:BOOL=OFF \
         -DBUILD_ZLIB_WITH_FETCHCONTENT:BOOL=OFF \
-        -DHDF5_BATCH_H5DETECT:BOOL=OFF \
         -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
         -DHDF5_BUILD_DOC:BOOL=OFF \
         -DHDF5_BUILD_EXAMPLES:BOOL=OFF \
         -DHDF5_BUILD_FORTRAN:BOOL=OFF \
-        -DHDF5_BUILD_FRAMEWORKS:BOOL=OFF \
-        -DHDF5_BUILD_GENERATORS:BOOL=OFF \
         -DHDF5_BUILD_HL_GIF_TOOLS:BOOL=OFF \
         -DHDF5_BUILD_HL_LIB:BOOL=OFF \
         -DHDF5_BUILD_JAVA:BOOL=OFF \
         -DHDF5_BUILD_PARALLEL_TOOLS:BOOL=OFF \
-        -DHDF5_BUILD_TOOLS:BOOL=ON \
+        -DHDF5_BUILD_TOOLS:BOOL=OFF \
         -DHDF5_BUILD_UTILS:BOOL=OFF \
-        -DHDF5_BUILD_WITH_INSTALL_NAME:BOOL=OFF \
         -DHDF5_DIMENSION_SCALES_NEW_REF:BOOL=OFF \
-        -DHDF5_DISABLE_COMPILER_WARNINGS:BOOL=OFF \
         -DHDF5_ENABLE_ALL_WARNINGS:BOOL=OFF \
         -DHDF5_ENABLE_COVERAGE:BOOL=OFF \
         -DHDF5_ENABLE_DEBUG_APIS:BOOL=OFF \
-        -DHDF5_ENABLE_DEPRECATED_SYMBOLS=ON \
         -DHDF5_ENABLE_DEV_WARNINGS=OFF \
         -DHDF5_ENABLE_DIRECT_VFD=OFF \
         -DHDF5_ENABLE_EMBEDDED_LIBINFO=OFF \
@@ -78,14 +82,7 @@ jobs:
         -DHDF5_MSVC_NAMING_CONVENTION:BOOL=OFF \
         -DHDF5_PACKAGE_EXTLIBS:BOOL=OFF \
         -DHDF5_PACK_EXAMPLES:BOOL=OFF \
-        -DHDF5_PACK_MACOSX_FRAMEWORK:BOOL=OFF \
         -DHDF5_USE_FILE_LOCKING:BOOL=OFF \
-        -DDF5_USE_GNU_DIRS:BOOL=OFF \
-        -DHDF5_USE_PREGEN:BOOL=OFF \
-        -DSZIP_USE_EXTERNAL:BOOL=OFF \
-        -DTEST_SHELL_SCRIPTS:BOOL=OFF \
-        -DUSE_LIBAEC_STATIC:BOOL=OFF \
-        -DZLIB_USE_EXTERNAL:BOOL=OFF \
         ..
         cmake --build .
         ctest --build . -V
