--- a/.github/workflows/aocc5.yml
+++ b/.github/workflows/aocc5.yml
@@ -3,7 +3,7 @@ name: linux autotools aocc ompi
 on:
   push:
     branches:
-      - main
+      - main-
 jobs:
   build:
     runs-on: ubuntu-latest
