--- a/.github/workflows/ios-auto.yml
+++ b/.github/workflows/ios-auto.yml
@@ -1,4 +1,4 @@
-name: mac ios
+name: mac ios auto
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: macos ios
+    name: macos ios auto
     runs-on: macos-latest
     steps:
     - name: Install Dependencies (macOS)
@@ -27,7 +27,6 @@ jobs:
         export CHOST="arm-apple-darwin"
         export OPT_FLAGS="-Os -g3"
         export CC="$(xcrun -find -sdk ${SDK} cc)"
-        export CXX="$(xcrun -find -sdk ${SDK} cxx)"
         export CPP="$(xcrun -find -sdk ${SDK} cpp)"
         export CFLAGS="${HOST_FLAGS} ${OPT_FLAGS}"
         export CXXFLAGS="${HOST_FLAGS} ${OPT_FLAGS}"
