--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -33,8 +33,7 @@ jobs:
         cmake \
         -GXcode \
         -DCMAKE_SYSTEM_NAME=iOS \
-        "-DCMAKE_OSX_ARCHITECTURES=arm64;i386;x86_64" \
-        -DCMAKE_OSX_DEPLOYMENT_TARGET=16.4.99 \
+        -DCMAKE_OSX_ARCHITECTURES=arm64 \
         -DCMAKE_INSTALL_PREFIX=`pwd`/_install \
         -DCMAKE_XCODE_ATTRIBUTE_ONLY_ACTIVE_ARCH=NO \
         -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_REQUIRE=NO \
