--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -43,7 +43,7 @@ jobs:
         -DBUILD_STATIC_EXECS:BOOL=ON \
         -DBUILD_STATIC_LIBS:BOOL=ON \
         -DBUILD_SZIP_WITH_FETCHCONTENT:BOOL=OFF \
-        -DBUILD_TESTING:BOOL=OFF \
+        -DBUILD_TESTING:BOOL=ON \
         -DBUILD_USER_DEFINED_LIBS:BOOL=OFF \
         -DBUILD_ZLIB_WITH_FETCHCONTENT:BOOL=OFF \
         -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
