--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -23,6 +23,10 @@ jobs:
         cd ./hdf5/build
         cmake \
         -GXcode \
+        -DSITE:STRING=ios \        
+        -DBUILDNAME:STRING="xcode/-sh+st/-bt" \
+        -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
+         -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
         -DCMAKE_SYSTEM_NAME=iOS \
         -DCMAKE_OSX_ARCHITECTURES=arm64 \
         -DCMAKE_INSTALL_PREFIX=`pwd`/_install \
@@ -73,5 +77,5 @@ jobs:
         -DHDF5_PACK_EXAMPLES:BOOL=OFF \
         -DHDF5_USE_FILE_LOCKING:BOOL=OFF \
         ..
-        cmake --build .
+        ctest -D Experimental
       shell: bash
