--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -26,7 +26,7 @@ jobs:
         -DSITE:STRING=ios \
         -DBUILDNAME:STRING="xcode/-sh+st/-bt" \
         -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
-         -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+        -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
         -DCMAKE_SYSTEM_NAME=iOS \
         -DCMAKE_OSX_ARCHITECTURES=arm64 \
         -DCMAKE_INSTALL_PREFIX=`pwd`/_install \
@@ -37,7 +37,7 @@ jobs:
         -DBUILD_STATIC_EXECS:BOOL=ON \
         -DBUILD_STATIC_LIBS:BOOL=ON \
         -DBUILD_SZIP_WITH_FETCHCONTENT:BOOL=OFF \
-        -DBUILD_TESTING:BOOL=OFF \
+        -DBUILD_TESTING:BOOL=ON \
         -DBUILD_USER_DEFINED_LIBS:BOOL=OFF \
         -DBUILD_ZLIB_WITH_FETCHCONTENT:BOOL=OFF \
         -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
