--- a/.github/workflows/ndk.yml
+++ b/.github/workflows/ndk.yml
@@ -17,11 +17,12 @@ jobs:
         run: |
           dir /usr/local/lib/android/sdk/ndk/
           mkdir build
+          cd build
           cmake \
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
           -DANDROID_ABI=arm64-v8a \
           -DBUILDNAME:STRING=ndk27.0 \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DSITE:STRING=arm64-v8a \
-          ..          
+          ..
           ctest -T Build
