--- a/.github/workflows/hermes.yml
+++ b/.github/workflows/hermes.yml
@@ -6,11 +6,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v4
-      - name: spack
         uses: actions/checkout@v4
         with:
           repository: spack/spack
@@ -35,7 +33,7 @@ jobs:
           sudo apt-get install -y openssl
           sudo apt-get install -y xz-utils
           sudo apt-get install -y zlib1g-dev
-      - name: install
+      - name: spack
         run: |
           pip install clingo
           . ./spack/share/spack/setup-env.sh
