--- a/.github/workflows/ndk.yml
+++ b/.github/workflows/ndk.yml
@@ -2,7 +2,7 @@ name: Setup Android NDK
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   ndk:
     name: ndk
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: HDFGroup/hdf5
+          repository: sheldonrobinson/hdf5
 
       - name: test
         run: |
@@ -21,7 +21,7 @@ jobs:
           cmake \
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
           -DANDROID_ABI=arm64-v8a \
-          -DBUILDNAME:STRING=ndk27.0 \
+          -DBUILDNAME:STRING=pr4986/ndk27.0 \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
           -DSITE:STRING=arm64-v8a \
           ..
