--- a/.github/workflows/ndk.yml
+++ b/.github/workflows/ndk.yml
@@ -20,6 +20,7 @@ jobs:
           cd build
           cmake \
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
+          -DANDROID \
           -DANDROID_ABI=arm64-v8a \
           -DBUILDNAME:STRING=pr4986/ndk27.0 \
           -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
