--- a/.github/workflows/ndk-bth.yml
+++ b/.github/workflows/ndk-bth.yml
@@ -14,11 +14,12 @@ jobs:
           repository: sheldonrobinson/hdf5
       - name: bthread
         run: |
-         ls $ANDROID_NDK/
+         ls $ANDROID_NDK/toolchains/llvm/prebuilt/linux-x86_64/bin/
          git clone https://github.com/SomeDevHere/libbthread
          cd libbthread
          autoreconf -i
-         export PATH="$PATH:$ANDROID_NDK/toolchains/llvm/prebuilt/linux-x86_64/bi$ target_host=aarch64-linux-android
+         export PATH="$PATH:$ANDROID_NDK/toolchains/llvm/prebuilt/linux-x86_64/bi
+         export target_host=aarch64-linux-android
          export AR=${target_host}-ar
          export AS=${target_host}-as
          export CC=${target_host}21-clang
