--- a/.github/workflows/ndk-bth.yml
+++ b/.github/workflows/ndk-bth.yml
@@ -32,12 +32,11 @@ jobs:
          env
          autoreconf -i
          ./configure --host=${target_host} --disable-shared
+         cat config.log
          make
          sudo make install
       - name: hdf5
         run: |
-          export CFLAGS="-I/usr/local/include"
-          export LFLAGS="-L/usr/local/lib -lbthread"
           dir /usr/local/lib/android/sdk/ndk/
           mkdir build
           cd build
