--- a/.github/workflows/ndk-bth.yml
+++ b/.github/workflows/ndk-bth.yml
@@ -40,6 +40,7 @@ jobs:
           dir /usr/local/lib/android/sdk/ndk/
           mkdir build
           cd build
+          export CFLAGS="-I/usr/local/include"
           cmake \
           -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK/build/cmake/android.toolchain.cmake \
           -DANDROID:BOOL=TRUE \
