--- a/.github/workflows/sol.yml
+++ b/.github/workflows/sol.yml
@@ -2,7 +2,7 @@ name: sol gcc
 
 on:
   push:
-    branches: main-
+    branches: main
 
 defaults:
   run:
@@ -31,9 +31,9 @@ jobs:
             make
             make install
             cd ..
-            curl -s -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz 
+            curl -s -O -L https://github.com/HDFGroup/hdf5/releases/latest/download/hdf5.tar.gz
             gtar zxf snapshot-1.14.5.tar.gz
-            cd hdf5-1.14.5-2
+            cd hdf5-1.14.5
             mkdir build
             cd build
             ls -l /tmp/bin
