ci(alp): zlib-dev

--- a/.github/workflows/i386-alp.yml
+++ b/.github/workflows/i386-alp.yml
@@ -19,7 +19,7 @@ jobs:
             build-base
             libgit2-dev
             libaec-dev
-            zlib1g-dev
+            zlib-dev
             cmake
       - name: run script
         run: |
