--- a/.github/workflows/i386-alp.yml
+++ b/.github/workflows/i386-alp.yml
@@ -29,6 +29,6 @@ jobs:
           cd hdf5-1.14.5	
           mkdir build
           cd build
-          cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="5/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON ..
+          cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="5/r/+sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DLIBAEC_PACKAGE_NAME:STRING=libaec ..
           ctest -D Experimental -C Release
         shell: bash
