--- a/.github/workflows/i386-alp.yml
+++ b/.github/workflows/i386-alp.yml
@@ -31,4 +31,4 @@ jobs:
           cd build
           cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="5/r/+sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DLIBAEC_PACKAGE_NAME:STRING=libaec ..
           ctest -D Experimental -C Release
-        shell: bash
+        shell: alpine.sh --root {0}
