--- a/.github/workflows/i386-alp.yml
+++ b/.github/workflows/i386-alp.yml
@@ -1,4 +1,4 @@
-name: i386 alp
+name: i386 alp szip
 
 on:
   push:
@@ -17,16 +17,17 @@ jobs:
           arch: x86
           packages: >
             build-base
+            cmake
+            curl
             libgit2-dev
             libaec-dev
             zlib-dev
-            cmake
       - name: run script
         run: |
           cat /etc/os-release
           curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/hdf5-1.14.5.tar.gz
           tar zxvf hdf5-1.14.5.tar.gz
-          cd hdf5-1.14.5	
+          cd hdf5-1.14.5
           mkdir build
           cd build
           cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="5/r/+sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DLIBAEC_PACKAGE_NAME:STRING=libaec ..
