--- a/.github/workflows/i386-alp.yml
+++ b/.github/workflows/i386-alp.yml
@@ -34,6 +34,6 @@ jobs:
           cd hdf5-1.14.5
           mkdir build
           cd build
-          cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="5/r/+sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON ..
+          cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="5/r-st/+sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DBUILD_STATIC_LIBS:BOOL=OFF ..
           ctest -D Experimental -C Release
         shell: alpine.sh --root {0}
