--- a/.github/workflows/i386-alp.yml
+++ b/.github/workflows/i386-alp.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          repository: m-cho/hdf5
+          ref: fix-libaec-detection
 
       - name: setup alpine
         uses: jirutka/setup-alpine@v1
@@ -26,15 +29,10 @@ jobs:
         run: |
           cat /etc/os-release
           export CMAKE_PREFIX_PATH=/usr/lib/cmake:$CMAKE_PREFIX_PATH
-          export LDFLAGS="-L/usr/lib -L/lib -lsz -laec"
-          ls /lib
-          ln -s /usr/lib/cmake/libaec-config-version.cmake /usr/lib/cmake/szip-config-version.cmake
-          ln -s /usr/lib/cmake/libaec-config.cmake /usr/lib/cmake/szip-config.cmake
-          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/hdf5-1.14.5.tar.gz
-          tar zxvf hdf5-1.14.5.tar.gz
-          cd hdf5-1.14.5
+          export LDFLAGS="-L/usr/lib -lsz"
           mkdir build
           cd build
-          cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="5/r-st/+sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DBUILD_STATIC_LIBS:BOOL=OFF ..
+          cmake -DSITE:STRING=alp.i386 -DBUILDNAME:STRING="pr5010/r-st/+sz" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=ON -DBUILD_STATIC_LIBS:BOOL=OFF ..
+          ctest -T Build
           # ctest -D Experimental -C Release
         shell: alpine.sh --root {0}
