--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -40,12 +40,15 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="pr5015/r/ec" \
+            -DBUILDNAME:STRING="pr5015/r/ec-hl-ts-sz-zl" \
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DHDF5_BUILD_HL_LIB:BOOL=OFF \
             -DHDF5_ENABLE_CONCURRENCY:BOOL=ON \
+            -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+            -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=OFF \
             -DSITE:STRING=obsd \
             ..
             ctest -D Experimental -C Release
