--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -1,4 +1,4 @@
-name: r ec 5015
+name: r 5082
 
 on:
   push:
@@ -20,8 +20,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: qkoziol/hdf5
-          ref: locking_protocol
+          repository: derobins/hdf5
+          ref: off_t_2_haddr_t
 
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
@@ -40,15 +40,15 @@ jobs:
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="pr5015/r/ec-hl-ts-sz-zl" \
+            -DBUILDNAME:STRING="pr5082/r/cpp/+hl+ts-sz-zl" \
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DHDF5_BUILD_HL_LIB:BOOL=OFF \
-            -DHDF5_ENABLE_CONCURRENCY:BOOL=ON \
-            -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
+            -DHDF5_BUILD_CPP_LIB:BOOL=ON \
+            -DHDF5_BUILD_HL_LIB:BOOL=ON \
+            -DHDF5_ENABLE_THREADSAFE:BOOL=ON \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
-            -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=OFF \
+            -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF \
             -DSITE:STRING=obsd \
             ..
             ctest -D Experimental -C Release
