--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -44,6 +44,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=Release \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+            -DHDF5_ALLOW_UNSUPPORTED:BOOL=ON \
             -DHDF5_BUILD_CPP_LIB:BOOL=ON \
             -DHDF5_BUILD_HL_LIB:BOOL=ON \
             -DHDF5_ENABLE_THREADSAFE:BOOL=ON \
