--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -2,7 +2,7 @@ name: r ec 5015
 
 on:
   push:
-    branches: main
+    branches: main-
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -48,7 +48,7 @@ jobs:
             -DHDF5_ENABLE_CONCURRENCY:BOOL=ON \
             -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
-            -DHDF5_ENABLE_ZLIB_SUPPORT:BOOL=OFF \
+            -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF \
             -DSITE:STRING=obsd \
             ..
             ctest -D Experimental -C Release
