ci(mac): use 14 for ikos

--- a/.github/workflows/mac-ikos.yml
+++ b/.github/workflows/mac-ikos.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     name: Test snapshot
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - name: test
         run: |
