--- a/.github/workflows/linkchecker.yml
+++ b/.github/workflows/linkchecker.yml
@@ -4,7 +4,6 @@ on:
   workflow_dispatch:
   push:
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,8 +31,8 @@ jobs:
           cd build
           cmake -DHDF5_BUILD_DOC:BOOL=ON ..
           make doxygen
-          pwd
-          ls -l hdf5lib_docs
-          cd hdf5lib_docs/html
-          linkchecker --check-extern ./index.html
 
+      - name: check
+        run: |
+          cd build/hdf5lib_docs/html
+          linkchecker --check-extern ./index.html
